--- a/AcessoGeoDB-master/app/src/main/res/layout/activity_adicionar_colheita.xml
+++ b/AcessoGeoDB-master/app/src/main/res/layout/activity_adicionar_colheita.xml
@@ -46,8 +46,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"/>
-
-
     </com.google.android.material.textfield.TextInputLayout>
+
+    <EditText
+        android:id="@+id/input_quantidade"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Quantidade"
+        android:inputType="numberDecimal" />
+
+    <EditText
+        android:id="@+id/input_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Data"
+        android:inputType="date" />
+
+    <Button
+        android:id="@+id/botao_adiciona_colheita"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="adicionar" />
 
 </LinearLayout>
