--- a/AcessoGeoDB-master/app/src/main/res/layout/activity_lavouras.xml
+++ b/AcessoGeoDB-master/app/src/main/res/layout/activity_lavouras.xml
@@ -21,4 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="adicionar talhão" />
+
+    <Button
+        android:id="@+id/botao_deletaTbl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="deletar tabelas" />
 </LinearLayout>
